[package]
name = "railway"
version = "0.3.3"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "Binary file format for vector animated pictures"
license = "MIT"
keywords = [ "vector-graphics", "render", "svg", "binary", "no_std" ]
repository = "https://github.com/NathanRoyer/railway"
readme = "README.md"
categories = [ "parsing", "rendering", "no-std", "graphics" ]

[dependencies]
wizdraw = "1.2.1"
log = "0.4.17"
vek = { version = "0.15.8", default-features = false }
num-traits = { version = "0.2.15", default-features = false, features = [ "libm" ] }
rgb = "0.8.36"

[features]
default = []
simd = [ "wizdraw/simd" ]

[dev-dependencies]
png = "0.17"

[[example]]
name = "generate"

[[example]]
name = "to_png"
